--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <header class="main-header">
             <a href="#" class="logo">
                 <!-- <button class="btn-link sidebar-toggle hidden-xs hidden-sm" data-toggle="push-menu" role="button">
-                <span class="icon-ic-menu-24px"></span>
-            </button> -->
+                                <span class="icon-ic-menu-24px"></span>
+                            </button> -->
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <!-- <span class="logo-mini"><b>A</b>LR</span> -->
 
@@ -115,10 +115,6 @@
                         <a>
                             <span class="icon-icon_home"></span> Dashboard</a>
                     </li>
-
-                    <li>
-                        <a href="#" class="current-active">Manage Reviews</a>
-                    </li>
                 </ul>
 
 
@@ -127,15 +123,10 @@
                     <ul class="nav navbar-nav">
                         <!-- Button -->
                         <!-- Messages: style can be found in-->
-                        <!-- <li class="hidden-xs hidden-sm">
-                        <button href="#" class="btn btn-primary fw-bold">
-                            You’re using <span class="color-pink">FREE</span> version. Get more with <span class="color-pink">UNLIMITED</span>
-                        </button>
-                    </li> -->
 
                         <li class="dropdown dropdown-header-menu tasks-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="icon-icon_help-center"></span>
+                                <span class="icon-ic-dashboard-24px"></span>
                                 <!-- <span class="label label-success">4</span> -->
                             </a>
                             <div class="dropdown-menu">
@@ -162,82 +153,6 @@
                                 </div>
                             </div>
                         </li>
-
-
-                        <li class="dropdown dropdown-header-menu messages-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="icon-icon_chat-notification-1"></i>
-                            </a>
-                            <div class="dropdown-menu">
-                                <div class="header fz17 fw-bold">Message</div>
-                                <ul class="list-unstyled">
-                                    <li class="item error">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-
-                                    <li class="item">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-                                    <li class="item error">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-
-                                    <li class="item">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-                                    <li class="item error">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-
-                                    <li class="item">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-                                    <li class="item error">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-
-                                    <li class="item">
-                                        <a href="">
-                                            <p class="fw-bold fz13 color-grey-400 mar-b-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, ducimus?Lorem
-                                                ipsum dolor sit amet.</p>
-                                            <p class="fz11 color-grey-400">Lorem ipsum dolor sit amet. ipsum dolor sit amet. ipsum dolor sit amet.</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <div class="footer">
-                                    <a href="#" class="color-dark-blue">See all</a>
-                                </div>
-                            </div>
-                        </li>
-
 
                         <li class="dropdown dropdown-header-menu notifications-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -315,7 +230,7 @@
                                         <a href="dashboard-manage-reviews-page.html" class="">No name</a>
                                     </li>
                                     <li>
-                                        <a href="pending-reviews-page.html" class="ico-hourglass">Pending Reviews</a>
+                                        <a href="#" class="ico-hourglass">Pending Reviews</a>
                                     </li>
                                     <li>
                                         <a href="approve-reviews-page.html" class="ico-approve-review">Approve Reviews</a>
@@ -342,8 +257,8 @@
                                     <li>
                                         <a href="#" class="ico-input-form">Input Form Edit</a>
                                     </li>
-                                    <li class="active">
-                                        <a href="#" class="ico-comment-form">Comment Form Edit</a>
+                                    <li>
+                                        <a href="comment-form-layout.html" class="ico-comment-form">Comment Form Edit</a>
                                     </li>
                                 </ul>
                             </div>
@@ -355,7 +270,7 @@
                     </li>
 
                     <li>
-                        <a href="getting-started.html" class="ico-get-star">Get starts</a>
+                        <a href="getting-started-page.html" class="ico-get-star">Get starts</a>
                     </li>
 
                     <li>
@@ -374,11 +289,6 @@
         <div class="wrapper-content">
             <div class="clearfix"></div>
             <div class="wrapper-space wrapper-space--45 bg-white">
-
-                <!-- prettier-ignore-start -->
-                | some | table | | ----s | --- - | | some | tabl e | | some | table |
-
-                <!-- prettier-ignore-end -->
                 <ul>
                     <li>
                         <a href="component.html" class="color-pink fw-bold">Components</a>
