--- a/product-reviews-page.html
+++ b/product-reviews-page.html
@@ -400,7 +400,7 @@
                                                     <a href="#">Laptop</a>
                                                 </span>
                                             </p>
-                                            <div class="col-lg-4 text-right text-left-lg">
+                                            <div class="col-lg-4 text-right fixAddReview">
                                                 <button class="btn btn-primary fw-bold fz12">+ Add Reviews</button>
                                             </div>
                                         </div>
