--- a/comment-form-layout.html
+++ b/comment-form-layout.html
@@ -567,7 +567,7 @@
                     <!-- END: col-left -->
 
                     <div class="col-lg-6">
-                        <div class="wrapper-preview-real preview-real--style-1 bg-dark-blue">
+                        <div class="wrapper-preview-real bg-dark-blue">
                             <div class="preview-real__header mar-b-15">
                                 <button class="btn btn-default btn-hvr-pink mar-r-10">
                                     <span class="icon-ic-brightness-6-24px"></span>
@@ -600,9 +600,9 @@
                                                     data-fractions="2" />
                                             </div>
                                         </div>
-                                        <p class="fw600 mr0">Based on 120 reviews</p>
+                                        <p class="fw-bold mr0">Based on 120 reviews</p>
 
-                                        <button class="btn btn-primary fw-bold fz11">Write a review</button>
+                                        <button class="btn btn-primary fw-bold">Write a review</button>
                                     </div>
                                 </div>
                                 <!-- END: Media Object Point -->
@@ -614,9 +614,6 @@
                                     <div class="media">
                                         <div class="media-left">
                                             <img src="http://via.placeholder.com/67x67" class="media-object img-rounded mar-b-5" style="width:67px">
-                                            <h4 class="media-left_name fz11 text-center fw-bold mar-0">
-                                                <a href="#">Maximus Bernhard</a>
-                                            </h4>
                                             <div class="media-left_location p-relative mar-b-5 mar-auto">
                                                 <span class="ali-flag-slc vn"></span>
                                                 <span class="fz13 fw600 color-dark-blue">AM</span>
@@ -624,17 +621,16 @@
                                         </div>
 
                                         <div class="media-body">
-                                            <h4 class="media-heading fz14 fw600 p-realative date-time" media-time="23/02/2018">
+                                            <h4 class="media-heading fz14 fw-bold p-realative date-time" media-time="23/02/2018">
                                                 <a href="#">Maximus Bernhard</a>
                                                 <span class="badge-verify icon-ic-verified-user-24px"></span>
                                             </h4>
 
-                                            <div class="media-body_rating mar-b-10 date-time" media-time="23/02/2018">
+                                            <div class="media-body_rating mar-b-10">
                                                 <div class="media_rating-box d-inline-block text-center">
                                                     <input type="hidden" class="rating-tooltip-manual" data-filled="ali-rating ali-rating--star icon-ic-star-24px" data-empty="ali-rating ali-rating--star icon-ic-star-border-24px"
                                                         data-fractions="2" />
                                                 </div>
-                                                <span class="badge-verify icon-ic-verified-user-24px"></span>
                                             </div>
 
                                             <article class="media-body_cnt fz11 mar-b-30">
@@ -673,7 +669,7 @@
                                         </div>
 
                                         <div class="media-body">
-                                            <h4 class="media-heading fz14 fw600 p-realative date-time" media-time="23/02/2018">
+                                            <h4 class="media-heading fz14 fw-bold p-realative date-time" media-time="23/02/2018">
                                                 <a href="#">Maximus Bernhard</a>
                                                 <span class="badge-verify icon-ic-verified-user-24px"></span>
                                             </h4>
