--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="wrapper-space wrapper-space--45 bg-white">
                 <ul>
                     <li>
-                        <a target="_blank" href="component.html" class="color-pink fw-bold">Components</a>
+                        <a target="_blank" href="index-v1.html" class="color-pink fw-bold">Components</a>
                     </li>
                     <li>
                         <a target="_blank" href="dashboard-page.html">Dashboard page</a>
